[project]
name = "claude-commander"
version = "0.1.0"
description = "Telegram bot to manage Claude Code sessions across multiple projects"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0",
    "python-dotenv>=1.0.0",
    "groq>=0.11.0",
]

[tool.ruff]
line-length = 88
